<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:text="SU COVID-19 Prevention System"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:background="@color/orange"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/badge"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/user_Email"
        android:text="Email"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Email Label -->
    <EditText
        android:id="@+id/input_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:hint="Email"/>

    <TextView
        android:id="@+id/user_Pwd"
        android:text="Password"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="0dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Pwd Label -->
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:hint="Password" />

    <Button
        android:id="@+id/button1"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:background="@drawable/shape"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/button2"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:background="@drawable/shape"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <Button android:id="@+id/btn_forgetpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="24dp"
        android:text="Forget Password"
        android:textAllCaps="false"
        android:background="@drawable/shape"
        android:textColor="#ffffff"
        android:textSize="15dp"/>


</LinearLayout>